--- a/.pylintrc
+++ b/.pylintrc
@@ -94,6 +94,7 @@ disable=abstract-method,
         map-builtin-not-iterating,
         metaclass-assignment,
         misplaced-comparison-constant,
+        missing-class-docstring,
         missing-function-docstring,
         missing-module-docstring,
         next-method-called,
@@ -119,6 +120,7 @@ disable=abstract-method,
         range-builtin-not-iterating,
         raw_input-builtin,
         rdiv-method,
+        redefined-builtin,
         reduce-builtin,
         relative-import,
         reload-builtin,
@@ -431,6 +433,6 @@ valid-metaclass-classmethod-first-arg=mcs
 
 # Exceptions that will emit a warning when being caught. Defaults to
 # "Exception"
-overgeneral-exceptions=StandardError,
-                       Exception,
-                       BaseException
+overgeneral-exceptions=builtins.StandardError,
+                       builtins.Exception,
+                       builtins.BaseException
