feat: add problem generation

--- a/.pylintrc
+++ b/.pylintrc
@@ -70,6 +70,7 @@ disable=abstract-method,
         div-method,
         duplicate-code,
         eq-without-hash,
+        eval-used,
         execfile-builtin,
         expression-not-assigned,
         file-builtin,
