--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ python = "^3.10"
 black = "^23.1.0"
 pylint = "^2.16.3"
 python-leetcode-runner = "^1.0.9"
+beautifulsoup4 = "^4.11.2"
+requests = "^2.28.2"
+lxml = "^4.9.2"
+tenacity = "^8.2.2"
+browser-cookie3 = "^0.17.1"
 
 
 [build-system]
