--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,13 @@ readme = "README.md"
 python = "^3.10"
 black = "^23.1.0"
 pylint = "^2.16.3"
-python-leetcode-runner = "^1.0.9"
 requests = "^2.28.2"
 lxml = "^4.9.2"
 tenacity = "^8.2.2"
 browser-cookie3 = "^0.17.1"
+pytest = "^7.2.2"
+setuptools = "^67.6.0"
+pytest-timeout = "^2.1.0"
 
 
 [build-system]
