--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ pytest = "^7.2.2"
 setuptools = "^67.6.0"
 pytest-timeout = "^2.1.0"
 
+[tool.black]
+line-length = 120
+target-version = ['py310']
+
 
 [build-system]
 requires = ["poetry-core"]
