--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ browser-cookie3 = "^0.17.1"
 pytest = "^7.2.2"
 setuptools = "^67.6.0"
 pytest-timeout = "^2.1.0"
+numpy = "^1.26.2"
 
 [tool.black]
 line-length = 120
