--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pytest = "^7.2.2"
 setuptools = "^67.6.0"
 pytest-timeout = "^2.1.0"
 numpy = "^1.26.2"
+jinja2 = "^3.1.2"
 
 [tool.black]
 line-length = 120
