--- a/.pylintrc
+++ b/.pylintrc
@@ -89,6 +89,7 @@ disable=abstract-method,
         intern-builtin,
         invalid-name,
         invalid-str-codec,
+        line-too-long,
         locally-disabled,
         long-builtin,
         long-suffix,
