--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ 3.8, 3.9 ]
+        python-version: [ 3.9 ]
     steps:
       - uses: actions/checkout@v3
       - name: Set up poetry
@@ -22,13 +22,14 @@ jobs:
           cache: 'poetry'
       - name: Install dependencies
         run: poetry install --no-root
-      - name: Get Python changed files
-        id: python-changed-files
-        uses: tj-actions/changed-files@v35
-        with:
-          files: |
-            **/*.py
-      - name: Lint with pylint and black
+#      - name: Get Python changed files
+#        id: python-changed-files
+#        uses: tj-actions/changed-files@v35
+#        with:
+#          files: |
+#            **/*.py
+      - name: Lint with ruff
         run: |
-          poetry run ./scripts/run_pylint.sh ${{ steps.python-changed-files.outputs.all_changed_and_modified_files }}
-          poetry run ./scripts/run_black.sh ${{ steps.python-changed-files.outputs.all_changed_and_modified_files }}
+          poetry run ./scripts/run_ruff.sh
+#          poetry run ./scripts/run_pylint.sh ${{ steps.python-changed-files.outputs.all_changed_and_modified_files }}
+#          poetry run ./scripts/run_black.sh ${{ steps.python-changed-files.outputs.all_changed_and_modified_files }}
