--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,18 @@ setuptools = "^67.6.0"
 pytest-timeout = "^2.1.0"
 numpy = "^1.26.2"
 jinja2 = "^3.1.2"
+ruff = "^0.3.4"
 
 [tool.black]
 line-length = 120
 target-version = ['py310']
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+select = ["E", "F", "B"]
+ignore = ["E741", "E731", "E501", "F405", "F403"]
 
 
 [build-system]
