--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pytest-timeout = "^2.1.0"
 numpy = "^1.26.2"
 jinja2 = "^3.1.2"
 ruff = "^0.3.4"
+scikit-image = "^0.23.2"
 
 [tool.black]
 line-length = 120
