--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ numpy = "^1.26.2"
 jinja2 = "^3.1.2"
 ruff = "^0.3.4"
 scikit-image = "^0.23.2"
+pathlib = "^1.0.1"
 
 [tool.black]
 line-length = 120
