--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,25 @@
-[tool.poetry]
+[project]
 name = "leetcode"
 version = "0.1.0"
 description = ""
+requires-python = ">=3.12"
 authors = ["TurtleSmoke <46165291+TuWG@users.noreply.github.com>"]
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.10"
-black = "^23.1.0"
-pylint = "^2.16.3"
-requests = "^2.28.2"
-lxml = "^4.9.2"
-tenacity = "^8.2.2"
-browser-cookie3 = "^0.17.1"
-pytest = "^7.2.2"
-setuptools = "^67.6.0"
-pytest-timeout = "^2.1.0"
-numpy = "^1.26.2"
-jinja2 = "^3.1.2"
-ruff = "^0.3.4"
-scikit-image = "^0.23.2"
-pathlib = "^1.0.1"
-
-[tool.black]
-line-length = 120
-target-version = ['py310']
+dependencies = [
+    "browser-cookie3>=0.19.1",
+    "jinja2>=3.1.4",
+    "lxml>=5.3.0",
+    "numpy>=2.1.2",
+    "pathlib>=1.0.1",
+    "pylint>=3.3.1",
+    "pytest>=8.3.3",
+    "pytest-timeout>=2.3.1",
+    "requests>=2.32.3",
+    "ruff>=0.7.1",
+    "scikit-image>=0.24.0",
+    "setuptools>=75.2.0",
+    "tenacity>=9.0.0",
+]
 
 [tool.ruff]
 line-length = 120
@@ -32,7 +27,3 @@ line-length = 120
 [tool.ruff.lint]
 select = ["E", "F", "B"]
 ignore = ["E741", "E731", "E501", "F405", "F403"]
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
