--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Ruff
 
 on:
   push:
@@ -8,28 +8,25 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ 3.9 ]
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up poetry
-        run: pipx install poetry
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
+      - uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
         with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'poetry'
+          version: "0.4.27"
+          enable-cache: true
+          cache-dependency-glob: 'uv.lock'
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: "pyproject.toml"
+
       - name: Install dependencies
-        run: poetry install --no-root
-#      - name: Get Python changed files
-#        id: python-changed-files
-#        uses: tj-actions/changed-files@v35
-#        with:
-#          files: |
-#            **/*.py
-      - name: Lint with ruff
+        run: uv sync --all-extras --dev
+
+      - name: Run ruff
         run: |
-          poetry run ./scripts/run_ruff.sh
-#          poetry run ./scripts/run_pylint.sh ${{ steps.python-changed-files.outputs.all_changed_and_modified_files }}
-#          poetry run ./scripts/run_black.sh ${{ steps.python-changed-files.outputs.all_changed_and_modified_files }}
+          uv run ruff format
+          uv run ruff check
