--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: uv sync --all-extras --dev
 
-      - name: Run ruff
+      - name: Run ruff checks
         run: |
-          uv run ruff format
+          uv run ruff format --check
           uv run ruff check
